# ProjMgr

./: CMakeLists.txt  README.md
include/ProjMgr/: Err.h  FileState.h  MemMap.h  Programme.h  Project.h  Screen.h  Selection.h
src/: main.cpp  main.manage.cpp  xMemMap.cpp  xProgramme.cpp  xProject.cpp  xScreen.cpp  xSelection.cpp
